tests/neg/i22670.check
-- [E222] Syntax Error: tests/neg/i22670/i22670-macro.scala:4:8 --------------------------------------------------------
 4 |package xy // error named package required for warning
   |^
   |The package name `i22670-macro$package` will be encoded on the classpath, and can lead to undefined behaviour.
 5 |import scala.quoted.*
 6 |transparent inline def foo =
 7 |  ${ fooImpl }
 8 |def fooImpl(using Quotes): Expr[Any] =
 9 |  Expr("hello")
   |--------------------------------------------------------------------------------------------------------------------
   | Explanation (enabled by `-explain`)
   |- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
   | Tooling may not cope with directories whose names do not match their package name.
   | For example, `p-q` is encoded as `p$minusq` and written that way to the file system.
   |
   | Package objects have names derived from their file names, so that names such as
   | `myfile.test.scala` and `myfile-test.scala` will result in encoded names for package objects.
   |
   | The name `i22670-macro$package` is encoded to `i22670$minusmacro$package`.
    --------------------------------------------------------------------------------------------------------------------
